refactor, docs:
- исправить методы удаления
- добавить javadoc для InMemoryTaskManager